--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YACHT-site</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="page-header"></header>
@@ -15,7 +16,75 @@
       <!-- Our yachts -->
       <section class="section-our-yachts"></section>
       <!-- Advantages -->
-      <section class="section-advantages"></section>
+      <section class="section-advantages">
+        <div class="advantages-box container">
+          <h2 class="advantages-title visually-hidden">Advantages</h2>
+          <ol class="advantages-list list">
+            <li class="advantages-list-item">
+              <p class="adantages-list-number">01</p>
+              <p class="advantages-list-text">
+                Swimming and water sports: try your hand at water skiing
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <p class="adantages-list-number">02</p>
+              <p class="advantages-list-text">
+                Fishing: try to catch your own dinner
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <p class="adantages-list-number">03</p>
+              <p class="advantages-list-text">
+                Sightseeing tours: take a shore or island tour, enjoy the views
+                and sunsets from the water
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <p class="adantages-list-number">04</p>
+              <p class="advantages-list-text">
+                Rest and relaxation: read a book or listen to music while
+                enjoying the outdoor atmosphere.
+              </p>
+            </li>
+          </ol>
+          <picture>
+            <source
+              srcset="
+                ./images/desktop_1440/advantages.jpg    1x,
+                ./images/desktop_1440/advantages@2x.jpg 2x
+              "
+              media="(min-width: 1440px)"
+            />
+            <source
+              srcset="
+                ./images/desktop_1280/advantages.jpg    1x,
+                ./images/desktop_1280/advantages@2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/tablet/advantages.jpg    1x,
+                ./images/tablet/advantages@2x.jpg 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <source
+              srcset="
+                ./images/mobile/advantages.jpg    1x,
+                ./images/mobile/advantages@2x.jpg 2x
+              "
+              media="(max-width: 767px)"
+            />
+            <img
+              class="advantages-img"
+              src="./images/mobile/advantages.jpg"
+              alt="yacht picture"
+            />
+          </picture>
+        </div>
+      </section>
+
       <!-- Rent a yacht -->
       <section class="section-rent-a-yacht"></section>
       <!-- Reviews -->
