--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/import.css" />
   </head>
   <body>
+    <!-- HEADER -->
     <header class="page-header"></header>
     <maim class="page-main">
       <!-- HERO -->
@@ -84,7 +85,6 @@
           </picture>
         </div>
       </section>
-
       <!-- Rent a yacht -->
       <section class="section-rent-a-yacht"></section>
       <!-- Reviews -->
